[package]
name = "my_redis"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug= false

[profile.test]
opt-level = 0
debug = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tokio = { version = "1.52.0", features = ["full"] }
dashmap = "6"
bytes = "1"
